{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 60,
  "lineage": "ad7d03cc-7d51-62e2-826d-061083294c10",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951339201998:security-group/sg-0bdeb83e3edfe670f",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0bdeb83e3edfe670f",
            "ingress": [],
            "name": "mycluster-cluster-2026042718325933110000000f",
            "name_prefix": "mycluster-cluster-",
            "owner_id": "951339201998",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mycluster-cluster"
            },
            "tags_all": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "mycluster-cluster",
              "project": "Jerney"
            },
            "timeouts": null,
            "vpc_id": "vpc-009c29abfea81e363"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951339201998:security-group/sg-0f722eabd5429804f",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0f722eabd5429804f",
            "ingress": [],
            "name": "mycluster-node-2026042718325925180000000e",
            "name_prefix": "mycluster-node-",
            "owner_id": "951339201998",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mycluster-node",
              "kubernetes.io/cluster/mycluster": "owned"
            },
            "tags_all": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "mycluster-node",
              "kubernetes.io/cluster/mycluster": "owned",
              "project": "Jerney"
            },
            "timeouts": null,
            "vpc_id": "vpc-009c29abfea81e363"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-574477977",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bdeb83e3edfe670f",
            "security_group_rule_id": "sgr-095b06367a5d2173c",
            "self": false,
            "source_security_group_id": "sg-0f722eabd5429804f",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3244407083",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f722eabd5429804f",
            "security_group_rule_id": "sgr-0b0a5c45705a378fe",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1637368936",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f722eabd5429804f",
            "security_group_rule_id": "sgr-09184f9ec040009f9",
            "self": false,
            "source_security_group_id": "sg-0bdeb83e3edfe670f",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3601266428",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f722eabd5429804f",
            "security_group_rule_id": "sgr-0084ecdd0e2279c1c",
            "self": false,
            "source_security_group_id": "sg-0bdeb83e3edfe670f",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-535073130",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f722eabd5429804f",
            "security_group_rule_id": "sgr-0064d5fd8dbb8314b",
            "self": false,
            "source_security_group_id": "sg-0bdeb83e3edfe670f",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-213429579",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f722eabd5429804f",
            "security_group_rule_id": "sgr-0db11a95ecd15234e",
            "self": false,
            "source_security_group_id": "sg-0bdeb83e3edfe670f",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1746509440",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f722eabd5429804f",
            "security_group_rule_id": "sgr-0782a00a8c7428503",
            "self": false,
            "source_security_group_id": "sg-0bdeb83e3edfe670f",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1568803826",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f722eabd5429804f",
            "security_group_rule_id": "sgr-0973093e79fd5f2c0",
            "self": false,
            "source_security_group_id": "sg-0bdeb83e3edfe670f",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-4255670080",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f722eabd5429804f",
            "security_group_rule_id": "sgr-029839f73841db1f0",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1239174334",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f722eabd5429804f",
            "security_group_rule_id": "sgr-0c69a6835144d9c9b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3984846673",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0f722eabd5429804f",
            "security_group_rule_id": "sgr-0d62f85ba054ee349",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951339201998:network-acl/acl-0a2cb4b13eeadfc7c",
            "default_network_acl_id": "acl-0a2cb4b13eeadfc7c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0a2cb4b13eeadfc7c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "951339201998",
            "subnet_ids": [
              "subnet-07da72f2237b669d2",
              "subnet-0b451ace3aac4a60b",
              "subnet-0ba94b0a7307a4edd",
              "subnet-0cde3de87fbd5cad0"
            ],
            "tags": {
              "Name": "mycluster-vpc-default"
            },
            "tags_all": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "mycluster-vpc-default",
              "project": "Jerney"
            },
            "vpc_id": "vpc-009c29abfea81e363"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951339201998:route-table/rtb-0798ce4bac4690b43",
            "default_route_table_id": "rtb-0798ce4bac4690b43",
            "id": "rtb-0798ce4bac4690b43",
            "owner_id": "951339201998",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "mycluster-vpc-default"
            },
            "tags_all": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "mycluster-vpc-default",
              "project": "Jerney"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-009c29abfea81e363"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951339201998:security-group/sg-096130c8fcc371817",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-096130c8fcc371817",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "951339201998",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mycluster-vpc-default"
            },
            "tags_all": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "mycluster-vpc-default",
              "project": "Jerney"
            },
            "vpc_id": "vpc-009c29abfea81e363"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-026e210e6cd5108e0",
            "arn": "arn:aws:ec2:ap-south-1:951339201998:elastic-ip/eipalloc-026e210e6cd5108e0",
            "domain": "vpc",
            "id": "eipalloc-026e210e6cd5108e0",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-35-154-61-99.ap-south-1.compute.amazonaws.com",
            "public_ip": "35.154.61.99",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mycluster-vpc-ap-south-1a"
            },
            "tags_all": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "mycluster-vpc-ap-south-1a",
              "project": "Jerney"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951339201998:internet-gateway/igw-0323332a0afca3e9d",
            "id": "igw-0323332a0afca3e9d",
            "owner_id": "951339201998",
            "tags": {
              "Name": "mycluster-vpc"
            },
            "tags_all": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "mycluster-vpc",
              "project": "Jerney"
            },
            "vpc_id": "vpc-009c29abfea81e363"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-026e210e6cd5108e0",
            "association_id": "eipassoc-0d90859d6999b8a53",
            "connectivity_type": "public",
            "id": "nat-0ad55d1d9d53d37f3",
            "network_interface_id": "eni-0a8e7191c7f4897cb",
            "private_ip": "10.0.48.220",
            "public_ip": "35.154.61.99",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cde3de87fbd5cad0",
            "tags": {
              "Name": "mycluster-vpc-ap-south-1a"
            },
            "tags_all": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "mycluster-vpc-ap-south-1a",
              "project": "Jerney"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04f0152caef1e1fc71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ad55d1d9d53d37f3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04f0152caef1e1fc7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0323332a0afca3e9d",
            "id": "r-rtb-03d073fba9d1d12141080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03d073fba9d1d1214",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951339201998:route-table/rtb-04f0152caef1e1fc7",
            "id": "rtb-04f0152caef1e1fc7",
            "owner_id": "951339201998",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "mycluster-vpc-private"
            },
            "tags_all": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "mycluster-vpc-private",
              "project": "Jerney"
            },
            "timeouts": null,
            "vpc_id": "vpc-009c29abfea81e363"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951339201998:route-table/rtb-03d073fba9d1d1214",
            "id": "rtb-03d073fba9d1d1214",
            "owner_id": "951339201998",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "mycluster-vpc-public"
            },
            "tags_all": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "mycluster-vpc-public",
              "project": "Jerney"
            },
            "timeouts": null,
            "vpc_id": "vpc-009c29abfea81e363"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0629cc025e7967ce7",
            "route_table_id": "rtb-04f0152caef1e1fc7",
            "subnet_id": "subnet-0ba94b0a7307a4edd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028b5c26549faafe8",
            "route_table_id": "rtb-04f0152caef1e1fc7",
            "subnet_id": "subnet-0c8403e4d16d1326f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db683cd03279b432",
            "route_table_id": "rtb-04f0152caef1e1fc7",
            "subnet_id": "subnet-07da72f2237b669d2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0714f6992ea3c03a3",
            "route_table_id": "rtb-03d073fba9d1d1214",
            "subnet_id": "subnet-0cde3de87fbd5cad0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4a407eda5adb07e",
            "route_table_id": "rtb-03d073fba9d1d1214",
            "subnet_id": "subnet-00cbcda6255545e38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc5ac29f5320bfee",
            "route_table_id": "rtb-03d073fba9d1d1214",
            "subnet_id": "subnet-0b451ace3aac4a60b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951339201998:subnet/subnet-0ba94b0a7307a4edd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba94b0a7307a4edd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "951339201998",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mycluster-vpc-private-ap-south-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "mycluster-vpc-private-ap-south-1a",
              "kubernetes.io/role/internal-elb": "1",
              "project": "Jerney"
            },
            "vpc_id": "vpc-009c29abfea81e363"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951339201998:subnet/subnet-0c8403e4d16d1326f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8403e4d16d1326f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "951339201998",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mycluster-vpc-private-ap-south-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "mycluster-vpc-private-ap-south-1b",
              "kubernetes.io/role/internal-elb": "1",
              "project": "Jerney"
            },
            "vpc_id": "vpc-009c29abfea81e363"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951339201998:subnet/subnet-07da72f2237b669d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07da72f2237b669d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "951339201998",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mycluster-vpc-private-ap-south-1c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "mycluster-vpc-private-ap-south-1c",
              "kubernetes.io/role/internal-elb": "1",
              "project": "Jerney"
            },
            "vpc_id": "vpc-009c29abfea81e363"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951339201998:subnet/subnet-0cde3de87fbd5cad0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.48.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cde3de87fbd5cad0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "951339201998",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mycluster-vpc-public-ap-south-1a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "mycluster-vpc-public-ap-south-1a",
              "kubernetes.io/role/elb": "1",
              "project": "Jerney"
            },
            "vpc_id": "vpc-009c29abfea81e363"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951339201998:subnet/subnet-00cbcda6255545e38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.49.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00cbcda6255545e38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "951339201998",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mycluster-vpc-public-ap-south-1b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "mycluster-vpc-public-ap-south-1b",
              "kubernetes.io/role/elb": "1",
              "project": "Jerney"
            },
            "vpc_id": "vpc-009c29abfea81e363"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951339201998:subnet/subnet-0b451ace3aac4a60b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b451ace3aac4a60b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "951339201998",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mycluster-vpc-public-ap-south-1c",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "mycluster-vpc-public-ap-south-1c",
              "kubernetes.io/role/elb": "1",
              "project": "Jerney"
            },
            "vpc_id": "vpc-009c29abfea81e363"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951339201998:vpc/vpc-009c29abfea81e363",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a2cb4b13eeadfc7c",
            "default_route_table_id": "rtb-0798ce4bac4690b43",
            "default_security_group_id": "sg-096130c8fcc371817",
            "dhcp_options_id": "dopt-0ce2bbdf4c7a5d80a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-009c29abfea81e363",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0798ce4bac4690b43",
            "owner_id": "951339201998",
            "tags": {
              "Name": "mycluster-vpc"
            },
            "tags_all": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "mycluster-vpc",
              "project": "Jerney"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}